@@ -1,5 +1,7 @@
 2009-10-23  Andreas Schwab  <schwab@linux-m68k.org>
 
+	* lisp.h (FIXNUM_OVERFLOW_P): Remove cast to avoid overflow.
+
 	* puresize.h (PURESIZE_RATIO): Decrease to 11/7.
 
 2009-10-23  Chong Yidong  <cyd@stupidchicken.com>
